# systra-charge-plan

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .jsrun  .prod-docker-compose.yml  CONVENTIONS.md  HOWTO_GITLAB.md  LICENSE  README.md  TODO.md  docker-compose.yml  env.dist  eslint.config.js  examples-queries.txt  exit  leaks.toml  lingui.config.js  package-lock.json  package.json  project_version  pyproject.toml  stylelint.config.mjs
.gitlab/merge_request_templates/: code-review-checklist.md
.poe/: graphs.toml  i18n.toml  linters.toml  schema.toml  secret.toml  server.toml  tasks.toml  tests.toml  version.toml
.poe/scripts/: coverage.py  gettext_report  run_pytest  tasks
_CHANGELOGS/Added/: backgroundcron_tasks_using_django_6.md
_CHANGELOGS/Changed/: better_support_for_gitlab_token_and_npmrc_in_dev.md  ci_catalog_07.md  django_6.md  ensure_db_config_is_coherent.md  explicit_config_for_rolldown_as_vite_8_is_used.md  frontsrcconfigjs_generated_from_script_gen_config.md  package_upgrades.md  packages_upgrade.md  postgresql_18.md  refacto_map_page.md  stylistic_update.md  sync_with_django-vue-boilerplate.md
_CHANGELOGS/Fixed/: allow_to_run_pytest_without_postgresql_client_inst.md  bind_python_venv_in_separate_folder_for_compose_de.md  fix_secretgitleaks_filetask.md
back/: manage.py  wsgi.py
back/config/: settings.py  urls.py
back/myapp/: admin.py  apps.py  signals.py  tasks.py  typing.py  urls.py  views.py
back/myapp/api/: mutations.py  perms.py  queries.py  schema.py  typing.py
back/myapp/api/category/: filters.py  queries.py  (+2 more)
back/myapp/locale/: .gitignore
back/myapp/migrations/: 0001_initial.py  0002_category_comment_post.py  0003_post_image.py  0004_line.py  0005_initial_line_data.py  0006_charge_plan.py
back/myapp/models/: __init__.py  _lookups.py  category.py  charge_plan.py  comment.py  line.py  post.py  user.py
back/myapp/service/: charge_plan.py  graphql.py
back/myapp/templates/: index.html
back/myapp/types/: __init__.py
back/myapp/utils/: version.py
back/tests/: settings.py  test_charge_plan_api.py  test_charge_plan_service.py  test_utils.py
docker/: Dockerfile  docker-healthcheck  nginx-server.conf  prestart.sh  tasks.conf
docker/dev/: Dockerfile  db-healthcheck  django-command  django.conf  preentrypoint.sh  prestart.sh  tasks-command  tasks.conf  vite-command  vite.conf
docker/prod/: postgresql.conf
docs/: schema.graphql
front/: index.html  lingui.config.js  lioness.cfg.js  vite.config.js
front/.scripts/: comps_graph  gen_config  gen_report_html  gen_scss  gettext-compile  gettext-extract  gettext-report  run_tests
front/src/: App.css  App.jsx  Main.jsx  config.js.dist  constants.js  fragments.js  index.jsx  lioness.js  main.css  main.jsx  queries.js  router.js  routes.jsx  theme.js  theme.jsx
front/src/auth/: AuthProvider.jsx  AuthRequired.jsx  index.js
front/src/components/: DatePicker.vue  DateRangePicker.vue  DatetimePicker.vue  InfoTooltip.vue  PostCard.jsx  PostCard.scoped.scss  PostCard.vue  PostList.jsx  PostList.vue  TimePicker.vue  TimePickerWithAllowedTimes.vue
front/src/graphql/: AllLines.query.graphql  AllPosts.query.graphql  AllUsers.query.graphql  AllUsersAndCategories.query.graphql  Category.query.graphql  CategoryPosts.query.graphql  ChargePlan.query.graphql  CreateComment.mutation.graphql  CreatePost.mutation.graphql  DeleteComment.mutation.graphql  DeletePost.mutation.graphql  Post.query.graphql  PostBasicFields.fragment.graphql  PostFullFields.fragment.graphql  SaveChargePlan.mutation.graphql  UpdateComment.mutation.graphql  UserFields.fragment.graphql  fragments.js  index.js  mutations.js  queries.js
front/src/i18n/: I18nProvider.jsx  index.js  lioness.js  locales.json
front/src/layout/: AppToolbar.jsx  AppToolbar.scoped.scss  DefaultLayout.jsx  FullLayout.jsx  NavigationDrawer.jsx  NavigationDrawer.scoped.scss  NavigationDrawer.scss
front/src/lioness/: Context.js  Context.js.map  index.js  index.js.map  interpolate.js  interpolate.js.map  useTranslation.js  useTranslation.js.map  withTranslation.js  withTranslation.js.map
front/src/locale/: en.po  fr.po  messages.pot
front/src/pages/: AddPost.css  AddPost.jsx  AddPost.scoped.scss  Category.jsx  Category.vue  ChargePlan.jsx  DataGridDemo.jsx  DataGridDemo.scoped.scss  Fail.jsx  Fail.vue  Home.jsx  Home.vue  Login.jsx  Login.scoped.scss  Login.vue  MapPage.css  MapPage.jsx  MapPage.scoped.scss  MapPage.scss  MapPage.vue  NewComp.vue  Pickers.jsx  Pickers.scoped.scss  Pickers.vue  Post.jsx  Post.vue  PostAdd.vue  User.jsx  User.vue  Wizard.vue  chargePlanUtils.js
front/src/routes/: AllRoutes.jsx  index.jsx
front/src/scss/: animations.scss  common.scss  main.scss  sass-js-importer.js  vuetify.scss
front/src/store/: index.js
front/src/theme/: ThemeProvider.jsx  index.jsx
front/src/utils/: AllRoutes.jsx  AuthProvider.jsx  AuthRequired.jsx  I18nProvider.jsx  ThemeProvider.jsx  auth.js  date.js  enum.js  graphql.js  i18n.js
front/static/: markers.json
front/tests/: App.test.js  chargePlan.test.js  common.js  constants.test.js  router.test.js  staticApolloUploadClientMock.js
front/tests/components/: InfoTooltip.test.js  PostCard.test.js  PostList.test.js
front/tests/i18n/: locales.test.js
front/tests/pages/: Category.test.js  Fail.test.js  Home.test.js  Login.test.js  MapPage.test.js  Post.test.js  PostAdd.test.js  User.test.js  Wizard.test.js
front/tests/utils/: auth.test.js
specs/001-charge-plan/: plan.md  spec.md  tasks.md
(+82 files in other folders)
